codepkg/objects/HRS_Disbursement__c.object
<CustomObject>
    <description>To track escrow disbursements for homeowner representative services</description>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>link the contractor the check is issued to</inlineHelpText>
        <label>Contractor</label>
        <referenceTo>Contractors__c</referenceTo>
        <relationshipLabel>HRS Disbursements</relationshipLabel>
        <relationshipName>HRS_Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disbursed_Date__c</fullName>
        <label>Disbursed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursed_Via__c</fullName>
        <label>Disbursed Via:</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disbursement_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pick-Up</fullName>
                </value>
                <value>
                    <fullName>Mailed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursement_Status__c</fullName>
        <label>Disbursement Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Disbursed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Draw_Amount__c</fullName>
        <formula>Invoice_Amount__c  -   Retainer_Draw_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draw Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Draw_Description__c</fullName>
        <inlineHelpText>brief description of reason for draw</inlineHelpText>
        <label>Draw Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check whether or not this is the final bill. No retainer will be held if you check this box.</inlineHelpText>
        <label>Final Bill?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HRS_name__c</fullName>
        <label>HRS#</label>
        <referenceTo>HRS__c</referenceTo>
        <relationshipLabel>Homeowner Representative Services Disbursements</relationshipLabel>
        <relationshipName>HRS_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Costs__c</fullName>
        <inlineHelpText>Enter labor costs, if any, on the invoice</inlineHelpText>
        <label>Labor Costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check whether or not the draw is for labor costs</inlineHelpText>
        <label>Labor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check whether or not the draw is for materials</inlineHelpText>
        <label>Materials?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_name__c</fullName>
        <label>Project#</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>HRS Disbursements</relationshipLabel>
        <relationshipName>HRS_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HRS Disbursements</relationshipLabel>
        <relationshipName>HRS_Disbursements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Retainer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check whether the draw is releasing the retainer back to the contractor</inlineHelpText>
        <label>Release Retainer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retainer_Draw_Amount__c</fullName>
        <inlineHelpText>Enter in the Retainer amount that is released</inlineHelpText>
        <label>Retainer Draw Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Held__c</fullName>
        <formula>IF( Final_Bill__c , 0, ((Labor_Costs__c)  * 0.10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retainer Held</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>HRS Disbursement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRSD-{000000}</displayFormat>
        <label>HRS Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRS Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Date_Required_if_Paid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   NOT(ISNEW()),
   ISPICKVAL( Disbursement_Status__c , &apos;Disbursed&apos;),
   ISPICKVAL( Disbursement_Status__c , &apos;Paid&apos;),   
   ISBLANK( Check_Date__c )
)</errorConditionFormula>
        <errorMessage>Check date is required when the disbursement is cut</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_number_Required_if_Paid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL( Disbursement_Status__c , &apos;Disbursed&apos;),
ISPICKVAL( Disbursement_Status__c , &apos;Paid&apos;),
ISBLANK( Check_Number__c )
)</errorConditionFormula>
        <errorMessage>Check number is required when the disbursement is cut</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disbursed_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISPICKVAL(  Disbursed_Via__c  ,&apos;Pick-Up&apos;),
ISPICKVAL(  Disbursed_Via__c  ,&apos;Mailed&apos;),
ISBLANK( Disbursed_Date__c )
)</errorConditionFormula>
        <errorMessage>Disbursed Date is required when the payment has been disbursed</errorMessage>
    </validationRules>
</CustomObject>